revert main to english

--- a/html_outputs/r-basics.html
+++ b/html_outputs/r-basics.html
@@ -118,7 +118,7 @@
 </h1>
 <div class="inline-figure"><img src="images/basics_header_close.png" width="100%" style="display: block; margin: auto;"></div>
 <p>Welcome!</p>
-<p>Esta página analisa o essencial do R. Não pretende ser um tutorial abrangente, mas fornece o básico e pode ser útil para refrescar a sua memória. A secção sobre Recursos para a aprendizagem contém links para tutoriais mais abrangentes.</p>
+<p>This page reviews the essentials of R. It is not intended to be a comprehensive tutorial, but it provides the basics and can be useful for refreshing your memory. The section on <a href="r-basics.html#learning">Resources for learning</a> links to more comprehensive tutorials.</p>
 <p>Parts of this page have been adapted with permission from the <a href="https://r4epis.netlify.app/">R4Epis project</a>.</p>
 <p>See the page on <a href="transition-to-r.html#transition-to-r">Transition to R</a> for tips on switching to R from STATA, SAS, or Excel.</p>
 <!-- ======================================================= -->
