--- a/preview/index.html
+++ b/preview/index.html
@@ -45,7 +45,7 @@
         <ul class="book-toc list-unstyled">
 <li><a class="active" href="index.html"></a></li>
 <li class="book-part">Preview pages</li>
-<li><a class="" href="epidemic-curves.html"><span class="header-section-number">1</span> Epidemic curves</a></li>
+<li><a class="" href="cleaning-data-and-core-functions.html"><span class="header-section-number">1</span> Cleaning data and core functions</a></li>
 </ul>
 
         <div class="book-extra">
@@ -185,7 +185,7 @@ a column separator --></p>
 
 <div class="chapter-nav">
 <div class="empty"></div>
-<div class="next"><a href="epidemic-curves.html"><span class="header-section-number">1</span> Epidemic curves</a></div>
+<div class="next"><a href="cleaning-data-and-core-functions.html"><span class="header-section-number">1</span> Cleaning data and core functions</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
