re-render with turkish link

--- a/html_outputs/index.html
+++ b/html_outputs/index.html
@@ -143,7 +143,7 @@
 <p><strong>Usage</strong>: This handbook has been used over <strong>1 million times by 300,000 people</strong> around the world.</p>
 <p><strong>Objective:</strong> Serve as a quick R code reference manual (online and <strong><a href="download-handbook-and-data.html#download-handbook-and-data">offline</a></strong>) with task-centered examples that address common epidemiological problems.</p>
 <p><strong>Are you just starting with R?</strong> Try our <strong><a href="https://www.appliedepi.org/tutorial/">free interactive tutorials</a></strong> or synchronous, virtual <strong><a href="https://www.appliedepi.org/live/">intro course</a></strong> used by US CDC, WHO, and 75+ other health agencies and Field Epi Training Programs worldwide.</p>
-<p><strong>Languages:</strong> <a href="https://epirhandbook.com/vn/">Vietnamese (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japanese (日本)</a></p>
+<p><strong>Languages:</strong> <a href="https://epirhandbook.com/vn/">Vietnamese (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japanese (日本)</a>, <a href="https://epirhandbook.com/tr/">Turkish (Türkçe)</a></p>
 <!-- * Use practical epi examples - cleaning case linelists, making transmission chains and epidemic curves, automated reports and dashboards, modeling incidence and making projections, demographic pyramids and rate standardization, record matching, outbreak detection, survey analysis, survival analysis, GIS basics, contact tracing, phylogenetic trees...   -->
 <!-- **How is this different than other R books?**   -->
 <!-- * It is community-driven - *written for epidemiologists by epidemiologists* in their spare time and leveraging experience in local, national, academic, and emergency settings   -->
