--- a/preview/index.html
+++ b/preview/index.html
@@ -28,7 +28,7 @@
 <body>
 <div class="alert alert-info alert-dismissible">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-      <strong>Need help learning R?</strong> Enroll in Applied Epi's <a href="www.appliedepi.org/live" class="alert-link">intro R course</a>, try our <a href="www.appliedepi.org/tutorial" class="alert-link">free R tutorials</a>, post in our <a href="community.appliedepi.org" class="alert-link">Community Q&amp;A forum</a>, or ask about our <a href="mailto:contact@appliedepi.org" class="alert-link">R Help Desk service</a>.
+      <strong>Need help learning R?</strong> Enroll in Applied Epi's <a href="https://www.appliedepi.org/live/" class="alert-link">intro R course</a>, try our <a href="https://www.appliedepi.org/tutorial/" class="alert-link">free R tutorials</a>, post in our <a href="https://community.appliedepi.org/" class="alert-link">Community Q&amp;A forum</a>, or ask about our <a href="mailto:contact@appliedepi.org" class="alert-link">R Help Desk service</a>.
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/autocomplete.js/0.38.0/autocomplete.jquery.min.js" integrity="sha512-GU9ayf+66Xx2TmpxqJpliWbT5PiGYxpaG8rfnBEk1LL8l1KGkRShhngwdXK1UgqhAzWpZHSiYPc09/NwDQIGyg==" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/mark.min.js" integrity="sha512-5CYOlHXGh6QpOFA/TeTylKLWfB3ftPsde7AnmhuitiTX4K5SqCLBeKro6sPS8ilsz1Q4NRx3v8Ko2IBiszzdww==" crossorigin="anonymous"></script><!-- CSS --><style type="text/css">
     
@@ -69,8 +69,8 @@
 </h2>
 <p><strong>Usage</strong>: This handbook has been used over <strong>1 million times by 300,000 people</strong> around the world.</p>
 <p><strong>Objective:</strong> Serve as a quick R code reference manual (online and <strong>[offline][Download handbook and data]</strong>) with task-centered examples that address common epidemiological problems.</p>
-<p><strong>Are you just starting with R?</strong> Try our <strong><a href="www.appliedepi.org/tutorial">free interactive tutorials</a></strong> or synchronous, virtual <strong><a href="www.appliedepi.org/live">intro course</a></strong> used by US CDC, WHO, and 75+ other health agencies and Field Epi Training Programs worldwide.</p>
-<p><strong>Languages:</strong> <a href="https://epirhandbook.com/vn/">Vietnamese (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japanese (日本)</a></p>
+<p><strong>Are you just starting with R?</strong> Try our <strong><a href="https://www.appliedepi.org/tutorial/">free interactive tutorials</a></strong> or synchronous, virtual <strong><a href="https://www.appliedepi.org/live/">intro course</a></strong> used by US CDC, WHO, and 75+ other health agencies and Field Epi Training Programs worldwide.</p>
+<p><strong>Languages:</strong> <a href="https://epirhandbook.com/vn/">Vietnamese (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japanese (日本)</a>, <a href="https://epirhandbook.com/tr/">Turkish (Türkçe)</a></p>
 <!-- * Use practical epi examples - cleaning case linelists, making transmission chains and epidemic curves, automated reports and dashboards, modeling incidence and making projections, demographic pyramids and rate standardization, record matching, outbreak detection, survey analysis, survival analysis, GIS basics, contact tracing, phylogenetic trees...   -->
 <!-- **How is this different than other R books?**   -->
 <!-- * It is community-driven - *written for epidemiologists by epidemiologists* in their spare time and leveraging experience in local, national, academic, and emergency settings   -->
