update usership numbers across all languages in output html

--- a/html_outputs/es/index.es.html
+++ b/html_outputs/es/index.es.html
@@ -642,9 +642,9 @@ gtag('config', 'G-QXDW878QLX', { 'anonymize_ip': true});
 <meta name="description" content="EpiRhandbook es un manual de referencia de R aplicado a la epidemiología y la salud pública. ">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- <span style="color: red;">**THIS IS A DRAFT.  REVIEWERS GIVE FEEDBACK AT THIS [LINK](https://forms.gle/4RNdRRLGx67xW9yq9)**.</span> --><!-- <span style="color: darkgreen;">**DO YOU LIKE THIS HANDBOOK? SHOULD SOMETHING BE CHANGED? PLEASE TELL US!**</span> --><!-- <form target="_blank" action="https://forms.gle/A5SnRVws7tPD15Js9"> --><!--     <input type="submit" value="FEEDBACK" /> --><!-- </form> --><!-- ======================================================= --><!-- ## An R reference manual for applied epidemiology and public health {.unnumbered} --><!-- <span style="color: brown;">**The Epi R Handbook is an R reference manual for applied epidemiology and public health.**</span> --><!-- ## About this handbook   --><section id="r-para-epidemiología-aplicada-y-salud-pública" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="r-para-epidemiología-aplicada-y-salud-pública">R para epidemiología aplicada y salud pública</h2>
-<p><strong>Utilización</strong>: Este manual ha sido utilizado más de <strong>1 millón de veces por 300.000 personas</strong> en todo el mundo.</p>
+<p><strong>Utilización</strong>: Este manual ha sido utilizado más de <strong>3 millón de veces por 850.000 personas</strong> en todo el mundo.</p>
 <p><strong>Objetivo:</strong> Servir como breve guía de referencia para escribir código en R (en línea y <a href="new_pages/data_used.es.html"><strong>versión sin conexión</strong></a>) con ejemplos detallados que aborden problemas epidemiológicos.</p>
-<p><strong>¿Estás empezando con R?</strong> Prueba nuestros <strong><a href="https://www.appliedepi.org/tutorial/">tutoriales interactivos gratuitos</a></strong> o <strong><a href="https://www.appliedepi.org/live/">el curso de introducción</a></strong> sincrónico, utilizado por los CDC de EE.UU., la OMS, y más de 75 agencias de salud y programas de formación de Epi de campo.</p>
+<p><strong>¿Estás empezando con R?</strong> Prueba nuestros <strong><a href="https://www.appliedepi.org/tutorial/">tutoriales interactivos gratuitos</a></strong> o <strong><a href="https://www.appliedepi.org/live/">el curso de introducción</a></strong> sincrónico, utilizado por los CDC de EE.UU., la OMS, y más de 400 agencias de salud y programas de formación de Epi de campo.</p>
 <p><strong>Idiomas:</strong> <a href="https://www.epirhandbook.com/en">Inglés (English)</a>, <a href="https://epirhandbook.com/fr">Francés (Français)</a>, <a href="https://epirhandbook.com/es/">Español</a>, <a href="https://epirhandbook.com/vn/">Vietnamita (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japonés (日本)</a>, <a href="https://epirhandbook.com/tr/">Turco (Türkçe)</a>, <a href="https://epirhandbook.com/pt">Portugués (Português)</a>, <a href="https://epirhandbook.com/ru">Ruso (Русский)</a></p>
 <!-- * Use practical epi examples - cleaning case linelists, making transmission chains and epidemic curves, automated reports and dashboards, modeling incidence and making projections, demographic pyramids and rate standardization, record matching, outbreak detection, survey analysis, survival analysis, GIS basics, contact tracing, phylogenetic trees...   -->
 <!-- **How is this different than other R books?**   -->
@@ -676,7 +676,7 @@ a column separator --></p>
 <li>Envía problemas a nuestro <strong><a href="https://github.com/appliedepi/epiRhandbook_eng">repositorio Github</a></strong>
 </li>
 </ul>
-<p><strong>Ofrecemos formación en R</strong> impartida por instructores con décadas de experiencia en epidemiología aplicada - envíanos un correo electrónico para hablar de ello.</p>
+<p><strong>Ofrecemos formación en R</strong> impartida por instructores con décadas de experiencia en epidemiología aplicada - <a href="www.appliedepi.org/live">www.appliedepi.org/live</a>.</p>
 </div>
 </div>
 <form target="_blank" action="https://www.paypal.com/donate" method="post">
