--- a/html_outputs/fr/index.fr.html
+++ b/html_outputs/fr/index.fr.html
@@ -641,7 +641,7 @@ gtag('config', 'G-QXDW878QLX', { 'anonymize_ip': true});
 <meta name="description" content="The Epi R Handbook est un manuel de référence sur l'utilisation de R en épidémiologie appliquée et santé publique.">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- <span style="color: red;">**THIS IS A DRAFT.  REVIEWERS GIVE FEEDBACK AT THIS [LINK](https://forms.gle/4RNdRRLGx67xW9yq9)**.</span> --><!-- <span style="color: darkgreen;">**DO YOU LIKE THIS HANDBOOK? SHOULD SOMETHING BE CHANGED? PLEASE TELL US!**</span> --><!-- <form target="_blank" action="https://forms.gle/A5SnRVws7tPD15Js9"> --><!--     <input type="submit" value="FEEDBACK" /> --><!-- </form> --><!-- ======================================================= --><!-- ## An R reference manual for applied epidemiology and public health {.unnumbered} --><!-- <span style="color: brown;">**The Epi R Handbook is an R reference manual for applied epidemiology and public health.**</span> --><!-- ## About this handbook   --><section id="r-pour-lépidémiologie-appliquée-et-la-santé-publique" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="r-pour-lépidémiologie-appliquée-et-la-santé-publique">R pour l’épidémiologie appliquée et la santé publique</h2>
-<p><strong>Utilisation</strong> : Ce manuel a été utilisé <strong>plus d’un million de fois par 400 000 personnes</strong> dans le monde entier.</p>
+<p><strong>Utilisation</strong> : Ce manuel a été utilisé <strong>plus de 3 millions de fois par 850 000 personnes</strong> dans le monde entier.</p>
 <p><strong>Objectif:</strong> Servir de manuel de référence rapide du code R (en ligne et <strong><a href="new_pages/data_used.fr.html">hors line</a></strong>) avec des exemples centrés sur la tâche qui traitent des problèmes épidémiologiques courants.</p>
 <p><strong>Essayez nos <a href="https://www.appliedepi.org/tutorial/">tutoriels interactifs gratuits</a></strong> ou notre <strong><a href="https://www.appliedepi.org/live/">cours d’introduction</a></strong> synchrone et virtuel utilisé par les CDC américains, l’OMS et plus de 130 autres agences de santé et programmes de formation à l’épidémiologie sur le terrain dans le monde entier.</p>
 <p><strong>Langues:</strong> <a href="https://epirhandbook.com/">Anglais (English)</a>, <a href="https://epirhandbook.com/es/">Espagnol (Español)</a>, <a href="https://epirhandbook.com/vn/">Vietnamien (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japonais (日本)</a>, <a href="https://epirhandbook.com/tr/">Turc (Türkçe)</a>, <a href="https://epirhandbook.com/fr/">Francais</a>, <a href="https://epirhandbook.com/pt/">Portugais (Português)</a>, <a href="https://epirhandbook.com/ru/">Russe</a></p>
@@ -669,10 +669,10 @@ a column separator --></p>
 <li>
 <strong>contact@appliedepi.org</strong>, tweeter <strong><a href="https://twitter.com/appliedepi">@appliedepi</a></strong>, ou <strong><a href="https://linkedin.com/company/appliedepi">LinkedIn</a></strong><br>
 </li>
-<li>Soumettre des problèmes à notre <strong><a href="https://github.com/appliedepi/epiRhandbook_eng">dépôt Github</a></strong>
+<li>Soumettre des problèmes à notre <strong><a href="https://github.com/appliedepi/epirhandbook_eng">dépôt Github</a></strong>
 </li>
 </ul>
-<p><strong>Nous proposons des formations R en direct</strong> dispensées par des formateurs ayant des décennies d’expérience en épidémiologie appliquée - envoyez-nous un courriel pour en discuter.</p>
+<p><strong>Nous proposons des formations R en direct</strong> dispensées par des formateurs ayant des décennies d’expérience en épidémiologie appliquée - <a href="www.appliedepi.org/live">www.appliedepi.org/live</a>.</p>
 </div>
 </div>
 <form target="_blank" action="https://www.paypal.com/donate" method="post">
