--- a/html_outputs/index.html
+++ b/html_outputs/index.html
@@ -642,9 +642,9 @@ gtag('config', 'G-QXDW878QLX', { 'anonymize_ip': true});
 <meta name="description" content="The Epi R Handbook is an R reference manual for applied epidemiology and public health.">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- <span style="color: red;">**THIS IS A DRAFT.  REVIEWERS GIVE FEEDBACK AT THIS [LINK](https://forms.gle/4RNdRRLGx67xW9yq9)**.</span> --><!-- <span style="color: darkgreen;">**DO YOU LIKE THIS HANDBOOK? SHOULD SOMETHING BE CHANGED? PLEASE TELL US!**</span> --><!-- <form target="_blank" action="https://forms.gle/A5SnRVws7tPD15Js9"> --><!--     <input type="submit" value="FEEDBACK" /> --><!-- </form> --><!-- ======================================================= --><!-- ## An R reference manual for applied epidemiology and public health {.unnumbered} --><!-- <span style="color: brown;">**The Epi R Handbook is an R reference manual for applied epidemiology and public health.**</span> --><!-- ## About this handbook   --><section id="r-for-applied-epidemiology-and-public-health" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="r-for-applied-epidemiology-and-public-health">R for applied epidemiology and public health</h2>
-<p><strong>Usage</strong>: This handbook has been used over <strong>1 million times by 450,000 people</strong> around the world.</p>
+<p><strong>Usage</strong>: This handbook has been used over <strong>3 million times by 850,000 people</strong> around the world.</p>
 <p><strong>Objective:</strong> Serve as a quick R code reference manual (online and <a href="new_pages/data_used.html"><strong>offline</strong></a><strong>)</strong>) with task-centered examples that address common epidemiological problems.</p>
-<p><strong>Are you just starting with R?</strong> Try our <a href="https://www.appliedepi.org/tutorial/"><strong>free interactive tutorials</strong></a> or synchronous, virtual <a href="https://www.appliedepi.org/live/"><strong>intro course</strong></a> used by US CDC, WHO, and 75+ other health agencies and Field Epi Training Programs worldwide.</p>
+<p><strong>Are you just starting with R?</strong> Try our <a href="https://www.appliedepi.org/tutorial/"><strong>free interactive tutorials</strong></a> or synchronous, virtual <a href="https://www.appliedepi.org/live/"><strong>intro course</strong></a> used by US CDC, WHO, and 400+ other health agencies and Field Epi Training Programs worldwide.</p>
 <p><strong>Languages:</strong> <a href="https://epirhandbook.com/fr">French (Français)</a>, <a href="https://epirhandbook.com/es/">Spanish (Español)</a>, <a href="https://epirhandbook.com/vn/">Vietnamese (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japanese (日本)</a>, <a href="https://epirhandbook.com/tr/">Turkish (Türkçe)</a>, <a href="https://epirhandbook.com/pt">Portuguese (Português)</a>, <a href="https://epirhandbook.com/ru">Russian (Русский)</a></p>
 <!-- * Use practical epi examples - cleaning case linelists, making transmission chains and epidemic curves, automated reports and dashboards, modeling incidence and making projections, demographic pyramids and rate standardization, record matching, outbreak detection, survey analysis, survival analysis, GIS basics, contact tracing, phylogenetic trees...   -->
 <!-- **How is this different than other R books?**   -->
@@ -680,7 +680,7 @@ a column separator --></p>
 <li>Submit issues to our <a href="https://github.com/appliedepi/epiRhandbook_eng"><strong>Github repository</strong></a>
 </li>
 </ul>
-<p><strong>We offer live R training</strong> from instructors with decades of applied epidemiology experience - email us to discuss.</p>
+<p><strong>We offer live R training</strong> from instructors with decades of applied epidemiology experience - <a href="www.appliedepi.org/live">www.appliedepi.org/live</a>.</p>
 </div>
 </div>
 <form target="_blank" action="https://www.paypal.com/donate" method="post">
