--- a/html_outputs/jp/index.jp.html
+++ b/html_outputs/jp/index.jp.html
@@ -642,9 +642,9 @@ gtag('config', 'G-QXDW878QLX', { 'anonymize_ip': true});
 <meta name="description" content="The Epi R Handbook is an R reference manual for applied epidemiology and public health.">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- <span style="color: red;">**THIS IS A DRAFT.  REVIEWERS GIVE FEEDBACK AT THIS [LINK](https://forms.gle/4RNdRRLGx67xW9yq9)**.</span> --><!-- <span style="color: darkgreen;">**DO YOU LIKE THIS HANDBOOK? SHOULD SOMETHING BE CHANGED? PLEASE TELL US!**</span> --><!-- <form target="_blank" action="https://forms.gle/A5SnRVws7tPD15Js9"> --><!--     <input type="submit" value="FEEDBACK" /> --><!-- </form> --><!-- ======================================================= --><!-- ## An R reference manual for applied epidemiology and public health {.unnumbered} --><!-- <span style="color: brown;">**The Epi R Handbook is an R reference manual for applied epidemiology and public health.**</span> --><!-- ## About this handbook   --><section id="疫学や公衆衛生に関わる業務のための-r" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="疫学や公衆衛生に関わる業務のための-r">疫学や公衆衛生に関わる業務のための R</h2>
-<p><strong>利用実績</strong>: 本ハンドブックは、世界中 <strong>45 万人に 100 万回以上</strong> 利用されています。</p>
+<p><strong>利用実績</strong>: 本ハンドブックは、世界中 <strong>85 万人に 300 万回以上</strong> 利用されています。</p>
 <p><strong>目的:</strong> 疫学業務や研究で頻繁に直面する課題に対する対処法の実例を扱い、素早く使用できる R のリファレンスマニュアルとしてオンラインでも<strong><a href="new_pages/data_used.jp.html">オフライン</a></strong>でも機能する</p>
-<p><strong>R を始めたばかりですか？</strong> アメリカ CDC、WHO、その他 75 以上の保健機関および世界中のフィールドエピトレーニングプログラムで使用されている <strong><a href="https://www.appliedepi.org/tutorial/">無料の自己学習型チュートリアル</a></strong> または、、ライブリモート型の <strong><a href="https://www.appliedepi.org/live/">intro course</a></strong> を試してください</p>
+<p><strong>R を始めたばかりですか？</strong> アメリカ CDC、WHO、その他 400 以上の保健機関および世界中のフィールドエピトレーニングプログラムで使用されている <strong><a href="https://www.appliedepi.org/tutorial/">無料の自己学習型チュートリアル</a></strong> または、、ライブリモート型の <strong><a href="https://www.appliedepi.org/live/">intro course</a></strong> を試してください</p>
 <p><strong>本書は他の言語でも利用できます:</strong> <a href="https://epirhandbook.com/en/">英語 (English)</a>, <a href="https://epirhandbook.com/vn/">ベトナム語 (Tiếng Việt)</a>, <a href="https://epirhandbook.com/fr">フランス語 (Français)</a>, <a href="https://epirhandbook.com/es/">スペイン語 (Español)</a>, <a href="https://epirhandbook.com/jp/">日本語</a>, <a href="https://epirhandbook.com/tr/">トルコ語 (Türkçe)</a>, <a href="https://epirhandbook.com/pt/">ポルトガル語 (Português)</a>, <a href="https://epirhandbook.com/ru">ロシア (Русский)</a></p>
 <!-- * Use practical epi examples - cleaning case linelists, making transmission chains and epidemic curves, automated reports and dashboards, modeling incidence and making projections, demographic pyramids and rate standardization, record matching, outbreak detection, survey analysis, survival analysis, GIS basics, contact tracing, phylogenetic trees...   -->
 <!-- **How is this different than other R books?**   -->
@@ -678,10 +678,10 @@ a column separator --></p>
 </li>
 <li>メールでのお問い合わせ先（英語）： <strong>contact@appliedepi.org</strong>
 </li>
-<li>ツイッター： <strong><a href="https://twitter.com/epirhandbook">@epiRhandbook</a></strong>（英語） <strong><a href="https://twitter.com/epirhandbook_jp">@epiRhandbook_jp</a></strong>（日本語）</li>
+<li>ツイッター： <strong><a href="https://twitter.com/epirhandbook">@epiRhandbook</a></strong>（英語） <strong><a href="https://twitter.com/epirhandbook">@epiRhandbook_jp</a></strong>（日本語）</li>
 <li>LinkedIn（英語）は <strong><a href="https://linkedin.com/company/appliedepi">こちら</a></strong>
 </li>
-<li>Github でのイシュー（Issue）の作成は、<strong><a href="https://github.com/appliedepi/epiRhandbook_jp">こちら</a></strong> （英語・日本語どちらでも可）</li>
+<li>Github でのイシュー（Issue）の作成は、<strong><a href="https://github.com/appliedepi/epiRhandbook_eng">こちら</a></strong> （英語・日本語どちらでも可）</li>
 </ul>
 <p>また、数十年にわたる疫学や疫学実務の経験を持つ講師による<strong>リアルタイムの R トレーニング</strong>も提供しています（現在は英語のみ）。ご興味のある方は、メールでご相談ください。</p>
 </div>
