--- a/html_outputs/pt/index.pt.html
+++ b/html_outputs/pt/index.pt.html
@@ -641,9 +641,9 @@ gtag('config', 'G-QXDW878QLX', { 'anonymize_ip': true});
 <meta name="description" content="The Epi R Handbook is an R reference manual for applied epidemiology and public health.">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- <span style="color: red;">**THIS IS A DRAFT.  REVIEWERS GIVE FEEDBACK AT THIS [LINK](https://forms.gle/4RNdRRLGx67xW9yq9)**.</span> --><!-- <span style="color: darkgreen;">**DO YOU LIKE THIS HANDBOOK? SHOULD SOMETHING BE CHANGED? PLEASE TELL US!**</span> --><!-- <form target="_blank" action="https://forms.gle/A5SnRVws7tPD15Js9"> --><!--     <input type="submit" value="FEEDBACK" /> --><!-- </form> --><!-- ======================================================= --><!-- ## An R reference manual for applied epidemiology and public health {.unnumbered} --><!-- <span style="color: brown;">**The Epi R Handbook is an R reference manual for applied epidemiology and public health.**</span> --><!-- ## About this handbook   --><section id="r-para-epidemiologia-aplicada-e-saúde-pública" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="r-para-epidemiologia-aplicada-e-saúde-pública">R para epidemiologia aplicada e saúde pública</h2>
-<p><strong>Uso</strong>: Esse manual já foi utilizado mais de <strong>1 milhão de vezes por 450,000 pessoas</strong> ao redor do mundo.</p>
+<p><strong>Uso</strong>: Esse manual já foi utilizado mais de <strong>3 milhão de vezes por 850,000 pessoas</strong> ao redor do mundo.</p>
 <p><strong>Objetivo:</strong> Servir como um guia de referência rápido para escrever código em R (online e <a href="new_pages/data_used.pt.html"><strong>offline</strong></a>) com exemplos centrados em exercícios que abordam problemas epidemiológicos comuns.</p>
-<p><strong>Você está começando a aprender R agora?</strong> Conheça nossos <a href="https://www.appliedepi.org/tutorial/"><strong>tutoriais interativos gratuitos</strong></a> ou o <a href="https://www.appliedepi.org/live/"><strong>curso introdutório</strong></a> síncrono e virtual utilizado pelo CDC dos EUA, pela OMS, e mais de 75 outras agências de saúde e programas de treinamento em Epidemiologia de Campo.</p>
+<p><strong>Você está começando a aprender R agora?</strong> Conheça nossos <a href="https://www.appliedepi.org/tutorial/"><strong>tutoriais interativos gratuitos</strong></a> ou o <a href="https://www.appliedepi.org/live/"><strong>curso introdutório</strong></a> síncrono e virtual utilizado pelo CDC dos EUA, pela OMS, e mais de 400 outras agências de saúde e programas de treinamento em Epidemiologia de Campo.</p>
 <p><strong>Idiomas:</strong> <a href="https://www.epirhandbook.com/en">Inglês (English)</a>, <a href="https://epirhandbook.com/fr">Francês (Français)</a>, <a href="https://epirhandbook.com/es/">Espanhol (Español)</a>, <a href="https://epirhandbook.com/vn/">Vietnamita (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japonês (日本)</a>, <a href="https://epirhandbook.com/tr/">Turco (Türkçe)</a>, <a href="https://epirhandbook.com/pt">Português</a>, <a href="https://epirhandbook.com/ru">Russo (Русский)</a></p>
 <p>Esta é uma versão traduzida para Português. Se você quer colaborar em melhorá-la, corrigindo algum erro, ou traduzir para outro idoma, por favor, nos contate!</p>
 <p><br><span style="color: black;"><strong>Escrito por epidemiologistas, para epidemiologistas</strong></span></p>
@@ -673,7 +673,7 @@ a column separator --></p>
 <li>Envie problemas para o nosso <a href="https://github.com/appliedepi/epiRhandbook_eng"><strong>repositório Github</strong></a>
 </li>
 </ul>
-<p><strong>Oferecemos treinamento em R ao vivo</strong> ministrado por instrutores com décadas de experiência em epidemiologia aplicada - envie-nos um e-mail para discutir.</p>
+<p><strong>Oferecemos treinamento em R ao vivo</strong> ministrado por instrutores com décadas de experiência em epidemiologia aplicada - <a href="www.appliedepi.org/live">www.appliedepi.org/live</a>.</p>
 </div>
 </div>
 <form target="_blank" action="https://www.paypal.com/donate" method="post">
