--- a/html_outputs/tr/index.tr.html
+++ b/html_outputs/tr/index.tr.html
@@ -642,9 +642,9 @@ gtag('config', 'G-QXDW878QLX', { 'anonymize_ip': true});
 <meta name="description" content="The Epi R Handbook is an R reference manual for applied epidemiology and public health.">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- <span style="color: red;">**THIS IS A DRAFT.  REVIEWERS GIVE FEEDBACK AT THIS [LINK](https://forms.gle/4RNdRRLGx67xW9yq9)**.</span> --><!-- <span style="color: darkgreen;">**DO YOU LIKE THIS HANDBOOK? SHOULD SOMETHING BE CHANGED? PLEASE TELL US!**</span> --><!-- <form target="_blank" action="https://forms.gle/A5SnRVws7tPD15Js9"> --><!--     <input type="submit" value="FEEDBACK" /> --><!-- </form> --><!-- ======================================================= --><!-- ## An R reference manual for applied epidemiology and public health {.unnumbered} --><!-- <span style="color: brown;">**The Epi R Handbook is an R reference manual for applied epidemiology and public health.**</span> --><!-- ## About this handbook   --><section id="uygulamalı-epidemiyoloji-ve-halk-sağlığı-için-r" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="uygulamalı-epidemiyoloji-ve-halk-sağlığı-için-r">Uygulamalı epidemiyoloji ve halk sağlığı için R</h2>
-<p><strong>Kullanımı</strong>: Bu çevrimiçi kitap, dünya çapında <strong>300.000 kişi tarafından 1 milyondan fazla kez</strong> kullanılmıştır.</p>
+<p><strong>Kullanımı</strong>: Bu çevrimiçi kitap, dünya çapında <strong>850.000 kişi tarafından 3 milyondan fazla kez</strong> kullanılmıştır.</p>
 <p><strong>Hedef:</strong> Yaygın epidemiyolojik sorunlara çözümler üreten, pratik, hedef odaklı ve hızlı bir (çevrimiçi ve <strong>[çevrimdışı][El Kitabı ve verileri indirme]</strong>) referans kılavuz olarak rol oynamak.</p>
-<p><strong>R’a yeni mi başlıyorsun?</strong> Ücretsiz <strong><a href="https://www.appliedepi.org/tutorial/">interaktif eğitimlerimiz</a></strong> ya da senkronize, sanal <strong><a href="https://www.appliedepi.org/live/">kurslarımız</a></strong> Amerika CDC, Dünya Sağlık Örgütü dahil olmak üzere 75’ten fazla sağlık örgütü ve saha eğitim programlarında kullanıldı.</p>
+<p><strong>R’a yeni mi başlıyorsun?</strong> Ücretsiz <strong><a href="https://www.appliedepi.org/tutorial/">interaktif eğitimlerimiz</a></strong> ya da senkronize, sanal <strong><a href="https://www.appliedepi.org/live/">kurslarımız</a></strong> Amerika CDC, Dünya Sağlık Örgütü dahil olmak üzere 400’ten fazla sağlık örgütü ve saha eğitim programlarında kullanıldı.</p>
 <p><strong>Diller:</strong> <a href="https://epirhandbook.com/en/">İngilizce (English)</a>, <a href="https://epirhandbook.com/vn/">Vietnamca (Tiếng Việt)</a>, <a href="https://epirhandbook.com/jp/">Japonca (日本)</a>, <a href="https://epirhandbook.com/es/">İspanyolca (Español)</a> <a href="https://epirhandbook.com/tr/">Türkçe</a>, <a href="https://epirhandbook.com/fr">Fransızca (Français)</a>, <a href="https://epirhandbook.com/pt">Portekizce (Português)</a>, <a href="https://epirhandbook.com/ru">Rusça (Русский)</a></p>
 <!-- * Use practical epi examples - cleaning case linelists, making transmission chains and epidemic curves, automated reports and dashboards, modeling incidence and making projections, demographic pyramids and rate standardization, record matching, outbreak detection, survey analysis, survival analysis, GIS basics, contact tracing, phylogenetic trees...   -->
 <!-- **How is this different than other R books?**   -->
@@ -680,7 +680,7 @@ a column separator --></p>
 <li>
 <strong><a href="https://github.com/appliedepi/epiRhandbook_eng">Github sunucumuza</a></strong> sorunlarınızı bildirebilirsiniz.</li>
 </ul>
-<p>Onlarca yıllık epidemiyoloji deneyimine sahip eğitmenlerimizle <strong>canlı R eğitimi sunuyoruz</strong> - başvurmak için bize e-mail atabilirsiniz.</p>
+<p>Onlarca yıllık epidemiyoloji deneyimine sahip eğitmenlerimizle <strong>canlı R eğitimi sunuyoruz</strong> - <a href="www.appliedepi.org/live">www.appliedepi.org/live</a>.</p>
 </div>
 </div>
 <form target="_blank" action="https://www.paypal.com/donate" method="post">
