--- a/banner.html
+++ b/banner.html
@@ -1,4 +1,3 @@
-<!-- Global site tag (gtag.js) - Google Analytics 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QXDW878QLX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -6,7 +5,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-QXDW878QLX');
-</script> -->
+</script>
 
 <div class="alert alert-info alert-dismissible">
   <!-- <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
