update offline book

--- a/html_outputs/ru/new_pages/data_used.ru.html
+++ b/html_outputs/ru/new_pages/data_used.ru.html
@@ -710,7 +710,7 @@ cookieconsent.run({
 <p><strong>Существует два способа скачивания руководства:</strong></p>
 <section id="использовать-ссылку-для-скачивания" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="использовать-ссылку-для-скачивания">Использовать ссылку для скачивания</h3>
-<p>Ждя быстрого доступа <strong>правый щелчок</strong> <a href="https://github.com/appliedepi/epirhandbook_eng/raw/master/offline_long/Epi_R_Handbook_offline.html">по этой ссылке</a> <strong>и выберите “Save link as - сохранить ссылку как”</strong>.</p>
+<p>Ждя быстрого доступа <strong>правый щелчок</strong> <a href="https://github.com/appliedepi/epiRhandbook_eng/raw/master/offline_long/index.ru.html">по этой ссылке</a> <strong>и выберите “Save link as - сохранить ссылку как”</strong>.</p>
 <p>Если вы работаете на компьютере Mac, используйте Cmd+щелчок. Если вы используете мобильный телефон, нажмите и удерживайте ссылку, затем выберите “Сохранить ссылку”. Руководство будет загружено на ваше устройство. Если появится окно с необработанным HTML-кодом, убедитесь, что вы выполнили приведенные выше инструкции, или попробуйте вариант 2.</p>
 </section>
 <section id="использовать-наш-пакет-r" class="level3 unnumbered">
