--- a/html_outputs/tr/new_pages/data_used.tr.html
+++ b/html_outputs/tr/new_pages/data_used.tr.html
@@ -707,7 +707,7 @@ cookieconsent.run({
 <p><strong>El Kitabını iki farklı yoldan indirebilirsiniz:</strong></p>
 <section id="indirme-linkini-kullanarak" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="indirme-linkini-kullanarak">İndirme linkini kullanarak</h3>
-<p>Linke hızlıca erişebilmek için, <strong>bu linki sağ fare tuşunuzla tıklayın</strong> <a href="https://github.com/appliedepi/epirhandbook_eng/raw/master/offline_long/Epi_R_Handbook_offline.html">link</a> <strong>ve “Farklı Kaydet” seçeneğini seçin</strong>.</p>
+<p>Linke hızlıca erişebilmek için, <strong>bu linki sağ fare tuşunuzla tıklayın</strong> <a href="https://github.com/appliedepi/epiRhandbook_eng/raw/master/offline_long/index.ru.html">link</a> <strong>ve “Farklı Kaydet” seçeneğini seçin</strong>.</p>
 <p>Mac kullanıyorsanız, Cmd’ye basılı tutarak farenizle tıklayın. Cep telefonu kullanıyorsanız, bağlantıyı basılı tutun ve “Bağlantıyı kaydet”i seçin. Kitap cihazınıza indirilecektir. Görseller olmadan HTML kodu içeren bir ekran görürseniz, yukarıdaki talimatları uyguladığınızdan emin olun veya ikinci seçeneği deneyin.</p>
 </section>
 <section id="r-paketimizi-kullanın" class="level3 unnumbered">
